rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_item_with_normalized_crate_name.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: TestStruct
Kind: Struct
Visibility: Public
Defined at: fixture_crate::TestStruct

A simple struct for testing basic functionality.

This struct demonstrates basic usage patterns and should show completely
since it only has one paragraph of documentation.
[+3 lines elided]


```rust
struct TestStruct {
    pub field: String,
    pub count: u32,
}
```

Fields:

• field: String
    A public field

• count: u32
    Another public field


Associated Types:

• pub const ASSOCIATED_CONST
    This is an associated constant for a struct

• pub fn new(field: String, count: u32) -> Self
    Create a new TestStruct

• pub fn get_field(&self) -> &str
    Get the field value

• pub fn increment_count(&mut self)
    Update the count


Trait Implementations:
TestTrait, alloc::borrow::ToOwned, core::any::Any, core::borrow::Borrow, core::borrow::BorrowMut, core::clone::Clone, core::clone::CloneToUninit, core::convert::From, core::convert::Into, core::convert::TryFrom, core::convert::TryInto, core::fmt::Debug, core::marker::Freeze, core::marker::Send, core::marker::Sync, core::marker::Unpin, core::marker::UnsafeUnpin, core::panic::unwind_safe::RefUnwindSafe, core::panic::unwind_safe::UnwindSafe
