rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_std_vec-2.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result_std_collections_hashmap
---
`std::collections::HashMap` not found. Did you mean one of these?
