rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_struct_with_private_fields.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: GenericStruct
Kind: Struct
Visibility: Public
Defined at: fixture_crate::GenericStruct

A generic struct for testing multi-paragraph documentation.

This struct demonstrates how generics work with complex type bounds
and provides a comprehensive example of the generic system in Rust.
[+11 lines elided]


```rust
struct GenericStruct<T, U = String>
where
    T: Clone + Send,
    U: std::fmt::Display {
    pub data: T,
    pub metadata: U,
}
```

Fields:

• data: T
    Generic field

• metadata: U
    Generic field with default


Trait Implementations:
core::any::Any, core::borrow::Borrow, core::borrow::BorrowMut, core::convert::From, core::convert::Into, core::convert::TryFrom, core::convert::TryInto, core::marker::Freeze, core::marker::Send, core::marker::Sync, core::marker::Unpin, core::marker::UnsafeUnpin, core::panic::unwind_safe::RefUnwindSafe, core::panic::unwind_safe::UnwindSafe
