rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_tuple_struct.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: TupleStruct
Kind: Struct
Visibility: Public
Defined at: fixture_crate::TupleStruct

A tuple struct for testing


```rust
struct TupleStruct(
    pub String, // field 0
    u32, // field 1
);
```
Fields:
• Field 0: String
     It's probably uncommon to add documentation for a tuple struct field


std traits: Any, Borrow<T>, BorrowMut<T>, Freeze, From<T>, Into<U>, RefUnwindSafe, Send, Sync, TryFrom<U> [+4 more]
