rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__get_unit_struct.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
Item: UnitStruct
Kind: Struct
Visibility: Public
Defined at: fixture_crate::UnitStruct

A unit struct for testing


```rust
struct UnitStruct;
```

Trait Implementations:
core::any::Any, core::borrow::Borrow, core::borrow::BorrowMut, core::convert::From, core::convert::Into, core::convert::TryFrom, core::convert::TryInto, core::marker::Freeze, core::marker::Send, core::marker::Sync, core::marker::Unpin, core::marker::UnsafeUnpin, core::panic::unwind_safe::RefUnwindSafe, core::panic::unwind_safe::UnwindSafe
