rustdoc-mcp/src/snapshots/rustdoc_mcp__tests__list_crates.snap
---
source: rustdoc-mcp/src/tests.rs
expression: result
---
• alloc 1.101.0-nightly
    The Rust core allocation and collections library
• core 1.101.0-nightly
    The Rust Core Library
• fixture-crate (workspace-local, aliased as "crate")
    this is the crate description
• proc_macro 1.101.0-nightly
    A support library for macro authors when defining new macros
• std 1.101.0-nightly
    The Rust Standard Library
• test 1.101.0-nightly
    Support code for rustc's built in unit-test and micro-benchmarking framework
